WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29953
[GTK] video sink pad template colorspace is wrong
https://bugs.webkit.org/show_bug.cgi?id=29953
Summary
[GTK] video sink pad template colorspace is wrong
Philippe Normand
Reported
2009-10-01 00:12:12 PDT
As pointed out by slomo, our sink suports xRGB and BGRx always. Cairo doesn't. CAIRO_FORMAT_RGB24 is xRGB on big endian machines, and BGRx on little endian. So this should really be #if G_BYTE_ORDER == G_LITTLE_ENDIAN GST_VIDEO_CAPS_BGRx #else GST_VIDEO_CAPS_xRGB #endif
Attachments
proposed patch
(2.50 KB, patch)
2009-10-01 06:22 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2009-10-01 06:22:49 PDT
Created
attachment 40437
[details]
proposed patch
Gustavo Noronha (kov)
Comment 2
2009-10-01 08:59:03 PDT
Comment on
attachment 40437
[details]
proposed patch Hmm. I tried to read some documentation about this problem, but could not find any useful stuff in a quick search. Looks correct to me, though.
WebKit Commit Bot
Comment 3
2009-10-01 10:09:43 PDT
Comment on
attachment 40437
[details]
proposed patch Clearing flags on attachment: 40437 Committed
r48979
: <
http://trac.webkit.org/changeset/48979
>
WebKit Commit Bot
Comment 4
2009-10-01 10:09:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug