2009-10-01  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha.

        [GTK] video sink pad template colorspace is wrong
        https://bugs.webkit.org/show_bug.cgi?id=29953

        Set sink pad template colorspace depending on byte order.

        * platform/graphics/gtk/VideoSinkGStreamer.cpp:
        (webkit_video_sink_idle_func):

Canonical link: https://commits.webkit.org/40538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48979 268f45cc-cd09-0410-ab3c-d52691b4dbfc